--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,10 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=test:codeGov
 
-# this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
-sonar.projectName=Code Governance
+sonar.projectKey=Market_Risk_Java
+sonar.projectName=Market_Risk_Service
 sonar.projectVersion=1.0
+# this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
+
 sonar.exclusions=src/main/java/**
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
