--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,13 +3,14 @@
 sonar.projectKey=Market_Risk_Java
 sonar.projectName=Market_Risk_Service
 sonar.projectVersion=1.0
+sonar.sources=.
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 
 sonar.exclusions=src/main/java/**
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
-#sonar.sources=.
+
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
