--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,10 @@
         </properties>
 	
 	<!-- Project Coordinates -->
-	<groupId>com.xyz</groupId>
-	<artifactId>simple-app</artifactId>
+	<!--<groupId>com.xyz</groupId>-->
+	<groupId>xyz</groupId>
+	<!--<artifactId>simple-app</artifactId>-->
+	<artifactId>Simple App</artifactId>
 	<version>1.0.0</version>
 
 	<!-- Project dependencies -->
